[receiver/influxdb] Use component.UseLocalHostAsDefaultHost feature gate (#30912)
**Description:** Fixes #30911

--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -24,6 +24,7 @@ subtext: |
     - processor/remotetap
     - receiver/splunk_hec
     - receiver/awsxray
+    - receiver/influxdb
 
 # If your change doesn't affect end users or the exported elements of any package,
 # you should instead start your pull request title with [chore] or use the "Skip Changelog" label.
