--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -25,6 +25,7 @@ subtext: |
     - receiver/splunk_hec
     - receiver/awsxray
     - receiver/influxdb
+    - receiver/zookeeper
 
 # If your change doesn't affect end users or the exported elements of any package,
 # you should instead start your pull request title with [chore] or use the "Skip Changelog" label.
