[chore] Update components' medata.yaml distribution information to match core and contrib (#30832)
**Description:** <Describe what has changed.>
<!--Ex. Fixing a bug - Describe the bug and how this fixes the issue.
Ex. Adding a feature - Explain what this achieves.-->
While investigating #30791 I noticed some components are included in
releases but their `metadata.yaml` files don't actually include the
distribution their included in. These updates should mean metadata is
now up to date with what's included in the
[core](https://github.com/open-telemetry/opentelemetry-collector-releases/blob/main/distributions/otelcol/manifest.yaml)
and
[contrib](https://github.com/open-telemetry/opentelemetry-collector-releases/blob/main/distributions/otelcol-contrib/manifest.yaml)
releases.

--- a/reports/distributions/contrib.yaml
+++ b/reports/distributions/contrib.yaml
@@ -178,6 +178,8 @@ components:
         - udplog
         - vcenter
         - wavefront
+        - webhookevent
+        - windowseventlog
         - windowsperfcounters
         - zipkin
         - zookeeper
