--- a/exporter/opencensusexporter/metadata.yaml
+++ b/exporter/opencensusexporter/metadata.yaml
@@ -4,6 +4,6 @@ status:
   class: exporter
   stability:
     beta: [traces, metrics]
-  distributions: [contrib, observiq]
+  distributions: [core, contrib, observiq]
   codeowners:
     active: [open-telemetry/collector-approvers]
