--- a/receiver/windowseventlogreceiver/metadata.yaml
+++ b/receiver/windowseventlogreceiver/metadata.yaml
@@ -4,6 +4,6 @@ status:
   class: receiver
   stability:
     alpha: [logs]
-  distributions: [splunk, observiq, sumo]
+  distributions: [contrib, splunk, observiq, sumo]
   codeowners:
     active: [djaglowski, armstrmi, pjanotti]
