[chore] move prometheusremotewrite exporter to generated lifecycle tests (#30541)
Relates to
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27849

---------

Co-authored-by: Curtis Robert <crobert@splunk.com>
Co-authored-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/exporter/prometheusremotewriteexporter/metadata.yaml
+++ b/exporter/prometheusremotewriteexporter/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [core, contrib, aws, observiq, liatrio]
   codeowners:
     active: [Aneurysm9, rapphil]
+
+tests:
+  config:
+  expect_consumer_error: true
