[chore] move opencensus exporter to generated lifecycle tests (#30538)
Relates to
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27849

---------

Co-authored-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/exporter/opencensusexporter/metadata.yaml
+++ b/exporter/opencensusexporter/metadata.yaml
@@ -7,3 +7,8 @@ status:
   distributions: [core, contrib, observiq]
   codeowners:
     active: [open-telemetry/collector-approvers]
+
+tests:
+  config:
+    endpoint: opencensus2:55678
+  expect_consumer_error: true
