[chore] move loki exporter to generated lifecycle tests (#30536)
Relates to
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27849

---------

Co-authored-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/exporter/lokiexporter/metadata.yaml
+++ b/exporter/lokiexporter/metadata.yaml
@@ -9,3 +9,7 @@ status:
   - observiq
   codeowners:
     active: [gramidt, gouthamve, jpkrohling, mar4uk]
+
+tests:
+  config:
+  expect_consumer_error: true
