[chore] move pulsar exporter to generated lifecycle tests (#30542)
Relates to
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27849

lifecycle test can't pass, encounter endless loop:
```
=== RUN   TestComponentLifecycle
=== RUN   TestComponentLifecycle/logs-shutdown
time="2024-01-13T16:17:22+08:00" level=info msg="[Connecting to broker]" remote_addr="pulsar://localhost:6650"
time="2024-01-13T16:17:22+08:00" level=warning msg="[Failed to connect to broker.]" error="dial tcp [::1]:6650: connect: connection refused" remote_addr="pulsar://localhost:6650"
time="2024-01-13T16:17:22+08:00" level=info msg="Removed connection from pool key=localhost:665045 0 logical_addr=pulsar://localhost:6650 physical_addr=pulsar://localhost:6650"
time="2024-01-13T16:17:22+08:00" level=info msg="[Connecting to broker]" remote_addr="pulsar://localhost:6650"
time="2024-01-13T16:17:22+08:00" level=warning msg="[Failed to connect to broker.]" error="dial tcp [::1]:6650: connect: connection refused" remote_addr="pulsar://localhost:6650"
time="2024-01-13T16:17:23+08:00" level=info msg="Removed connection from pool key=localhost:665045 0 logical_addr=pulsar://localhost:6650 physical_addr=pulsar://localhost:6650"
```

---------

Co-authored-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/exporter/pulsarexporter/metadata.yaml
+++ b/exporter/pulsarexporter/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib, splunk]
   codeowners:
     active: [dmitryax, dao-jun]
+
+tests:
+  config:
+  skip_lifecycle: true
