[receiver/jaeger] jaegerreceiver adopts `component.UseLocalHostAsDefaultHost` feature gate (#30980)
Description:
jaegerreceiver adopts component.UseLocalHostAsDefaultHost feature gate

Link to tracking Issue:

https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/30702

Fixes
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/30979

Documentation:
Updated docs.

Co-authored-by: Pablo Baeyens <pbaeyens31+github@gmail.com>

--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -27,6 +27,7 @@ subtext: |
     - receiver/influxdb
     - receiver/zookeeper
     - receiver/signalfx
+    - receiver/jaeger
     - receiver/skywalking
 
 # If your change doesn't affect end users or the exported elements of any package,
