[extension/jaegerremotesampling] jaegerremotesampling adopts `component.UseLocalHostAsDefaultHost` feature gate (#30983)
Description:
jaegerremotesampling extension adopts
component.UseLocalHostAsDefaultHost feature gate

Link to tracking Issue:

https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/30702

Fixes
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/30982

Documentation:
Updated docs.

Co-authored-by: Pablo Baeyens <pbaeyens31+github@gmail.com>

--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -27,6 +27,7 @@ subtext: |
     - receiver/influxdb
     - receiver/zookeeper
     - receiver/signalfx
+    - extension/jaegerremotesampling
     - receiver/jaeger
     - receiver/skywalking
 
