[receiver/sapm] sapmreceiver adopts `component.UseLocalHostAsDefaultHost` feature gate (#30926)
**Description:**
sapmreceiver adopts `component.UseLocalHostAsDefaultHost` feature gate

**Link to tracking Issue:**
#30702 

**Documentation:**
Updated docs.

---------

Co-authored-by: Pablo Baeyens <pbaeyens31+github@gmail.com>

--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -27,6 +27,7 @@ subtext: |
     - receiver/influxdb
     - receiver/zookeeper
     - receiver/signalfx
+    - receiver/sapm
     - extension/jaegerremotesampling
     - receiver/jaeger
     - receiver/skywalking
