[extension/awsproxy] awsproxy extension adopts `component.UseLocalHostAsDefaultHost` feature gate (#30985)
Description:
awsproxy extension adopts `component.UseLocalHostAsDefaultHost` feature
gate

Link to tracking Issue:

https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/30702

Fixes
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/30984

Documentation:
Updated docs.

Co-authored-by: Pablo Baeyens <pbaeyens31+github@gmail.com>

--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -27,6 +27,7 @@ subtext: |
     - receiver/influxdb
     - receiver/zookeeper
     - receiver/signalfx
+    - extension/awsproxy
     - receiver/sapm
     - extension/jaegerremotesampling
     - receiver/jaeger
