--- a/exporter/awsemfexporter/metadata.yaml
+++ b/exporter/awsemfexporter/metadata.yaml
@@ -7,3 +7,10 @@ status:
   distributions: [contrib, aws, observiq]
   codeowners:
     active: [Aneurysm9, shaochengwang, mxiamxia, bryan-aguilar]
+
+tests:
+  config:
+    region: 'us-west-2'
+    resource_to_telemetry_conversion:
+      enabled: true
+  expect_consumer_error: true
