--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -17,21 +17,22 @@ issues: [30702]
 # Use pipe (|) for multiline entries.
 subtext: | 
   This change affects the following components:
-    - receiver/loki
-    - receiver/opencensus
-    - receiver/zipkin
-    - receiver/awsfirehose
+    - extension/awsproxy
+    - extension/health_check
+    - extension/jaegerremotesampling
     - processor/remotetap
-    - receiver/splunk_hec
+    - receiver/awsfirehose
     - receiver/awsxray
     - receiver/influxdb
-    - receiver/zookeeper
-    - receiver/signalfx
-    - extension/awsproxy
-    - receiver/sapm
-    - extension/jaegerremotesampling
     - receiver/jaeger
+    - receiver/loki
+    - receiver/opencensus
+    - receiver/sapm
+    - receiver/signalfx
     - receiver/skywalking
+    - receiver/splunk_hec
+    - receiver/zipkin
+    - receiver/zookeeper
 
 # If your change doesn't affect end users or the exported elements of any package,
 # you should instead start your pull request title with [chore] or use the "Skip Changelog" label.
