[internal/aws/proxy] adopt `component.UseLocalHostAsDefaultHost` feature gate (#30987)
Description:
internal/aws/proxy adopts `component.UseLocalHostAsDefaultHost` feature
gate

Link to tracking Issue:

https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/30702

Fixes
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/30986

Documentation:
Updated docs.

---------

Co-authored-by: Pablo Baeyens <pbaeyens31+github@gmail.com>
Co-authored-by: Pablo Baeyens <pablo.baeyens@datadoghq.com>

--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -20,6 +20,7 @@ subtext: |
     - extension/awsproxy
     - extension/health_check
     - extension/jaegerremotesampling
+    - internal/aws/proxy
     - processor/remotetap
     - receiver/awsfirehose
     - receiver/awsxray
