[chore] add generated lifecycle tests to syslogexporter (#30974)
Relates to
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27849

--- a/exporter/syslogexporter/metadata.yaml
+++ b/exporter/syslogexporter/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib]
   codeowners:
     active: [kkujawa-sumo, rnishtala-sumo, astencel-sumo]
+
+tests:
+  config:
+  skip_lifecycle: true
