[chore][receiver/sqlquery] Move reusable logic to internal package (#30709)
**Description:** 
As noted in the related issues, a lot of the logic in the sqlquery
receiver can be moved to a central package to be used by other
receivers. I realize this appears to be a large change, but it's purely
a re-organization PR, there's no functional changes. GitHub is not
recognizing moved files, so please refer to new file names and their
deleted counterparts. A lot of members are now public in the internal
package that were private in the receiver which is likely what's causing
GitHub to miss that they're just moved files.

This doesn't require a changelog (in my mind) because all things moving
were originally private to the receiver. They're now still purely
internal, so they won't be published.

I believe `internal` is the best destination for now as it allows us to
solidify the usage and interface before moving it to `pkg` to be
publicly available. There are still a lot of unknowns as far as how it
can be used by other receivers, so I fully expect "breaking changes" to
this. If we keep it internal we can update all usages with the changing
interface, so the changes won't be breaking.

**Link to tracking Issue:** 
#30297, #13546

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -124,6 +124,7 @@ body:
       - internal/metadataproviders
       - internal/sharedcomponent
       - internal/splunk
+      - internal/sqlquery
       - internal/tools
       - pkg/batchperresourceattr
       - pkg/batchpersignal
