--- a/exporter/elasticsearchexporter/metadata.yaml
+++ b/exporter/elasticsearchexporter/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib, observiq]
   codeowners:
     active: [JaredTan95]
+
+tests:
+  config:
+    endpoints: [http://localhost:9200]
