New component: Sumo Logic extension (#29603)
**Description:**

Adds new component (sumologicextension). This is only factory and
configuration PR

**Link to tracking Issue:** #29601 

**Testing:** N/A

**Documentation:**

- readme
- metadata.yaml

---------

Signed-off-by: Dominik Rosiek <drosiek@sumologic.com>
Co-authored-by: Antoine Toulme <antoine@toulme.name>
Co-authored-by: Andrzej Stencel <astencel@sumologic.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -112,6 +112,7 @@ extension/solarwindsapmsettingsextension/                @open-telemetry/collect
 extension/storage/                                       @open-telemetry/collector-contrib-approvers @dmitryax @atoulme @djaglowski
 extension/storage/dbstorage/                             @open-telemetry/collector-contrib-approvers @dmitryax @atoulme
 extension/storage/filestorage/                           @open-telemetry/collector-contrib-approvers @djaglowski
+extension/sumologicextension/                            @open-telemetry/collector-contrib-approvers @astencel-sumo @sumo-drosiek @swiatekm-sumo
 
 internal/aws/                                            @open-telemetry/collector-contrib-approvers @Aneurysm9 @mxiamxia
 internal/collectd/                                       @open-telemetry/collector-contrib-approvers @atoulme
