--- a/reports/distributions/sumo.yaml
+++ b/reports/distributions/sumo.yaml
@@ -39,6 +39,7 @@ components:
         - oidc
         - pprof
         - sigv4auth
+        - sumologic
     processor:
         - attributes
         - cumulativetodelta
