[chore] move coralogix exporter to generated lifecycle tests (#30517)
Relates to #27849

---------

Co-authored-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/exporter/coralogixexporter/metadata.yaml
+++ b/exporter/coralogixexporter/metadata.yaml
@@ -7,3 +7,9 @@ status:
   distributions: [contrib, observiq]
   codeowners:
     active: [povilasv, matej-g]
+
+tests:
+  config:
+    domain: "coralogix.com"
+    private_key: "xxx"
+  expect_consumer_error: true
