--- a/exporter/azuredataexplorerexporter/metadata.yaml
+++ b/exporter/azuredataexplorerexporter/metadata.yaml
@@ -7,3 +7,11 @@ status:
   distributions: [contrib]
   codeowners:
     active: [asaharn, ag-ramachandran]
+
+tests:
+  config:
+    cluster_uri: "https://CLUSTER.kusto.windows.net"
+    application_id: "f80da32c-108c-415c-a19e-643f461a677a"
+    application_key: "xx-xx-xx-xx"
+    tenant_id: "21ff9e36-fbaa-43c8-98ba-00431ea10bc3"
+  skip_lifecycle: true
