[chore] move influxdb exporter to generated lifecycle tests (#30529)
Relates to
https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/27849

---------

Co-authored-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/exporter/influxdbexporter/metadata.yaml
+++ b/exporter/influxdbexporter/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib, observiq, liatrio]
   codeowners:
     active: [jacobmarble]
+
+tests:
+  config:
+  expect_consumer_error: true
