[chore] Remove @pmcollins as code owner (#31044)
**Description:** <Describe what has changed.>
<!--Ex. Fixing a bug - Describe the bug and how this fixes the issue.
Ex. Adding a feature - Explain what this achieves.-->
This removes @pmcollins as code owner, as he reached out and is no
longer able to be a code owner in the collector repository.

Thanks for all of your help here Pablo!

**Link to tracking Issue:** <Issue number if applicable>
Should be merged after #31043.

--- a/receiver/filereceiver/metadata.yaml
+++ b/receiver/filereceiver/metadata.yaml
@@ -6,4 +6,5 @@ status:
     development: [metrics]
   distributions: [contrib]
   codeowners:
-    active: [pmcollins, djaglowski]
+    active: [djaglowski]
+    emeritus: [pmcollins]
