--- a/receiver/sqlqueryreceiver/metadata.yaml
+++ b/receiver/sqlqueryreceiver/metadata.yaml
@@ -7,7 +7,8 @@ status:
     development: [logs]
   distributions: [contrib, splunk, observiq, sumo]
   codeowners:
-    active: [dmitryax, pmcollins]
+    active: [dmitryax]
+    emeritus: [pmcollins]
 
 tests:
   config:
