--- a/.github/workflows/tidy-dependencies.yml
+++ b/.github/workflows/tidy-dependencies.yml
@@ -38,13 +38,13 @@ jobs:
       - name: Install Tools
         if: steps.go-cache.outputs.cache-hit != 'true'
         run: make install-tools
-      - name: go mod tidy
+      - name: go mod tidy, make genotelcontribcol and make genoteltestbed
         run: |
-          make gotidy
+          make gotidy && make genotelcontribcol && make genoteltestbed
           git config user.name opentelemetrybot
           git config user.email 107717825+opentelemetrybot@users.noreply.github.com
-          echo "git diff --exit-code || (git add . && git commit -m \"go mod tidy\" && git push)"
-          git diff --exit-code || (git add . && git commit -m "go mod tidy" && git push)
+          echo "git diff --exit-code || (git add . && git commit -m \"go mod tidy, make genotelcontribcol and make genoteltestbed\" && git push)"
+          git diff --exit-code || (git add . && git commit -m "go mod tidy, make genotelcontribcol and make genoteltestbed" && git push)
         env:
           GITHUB_TOKEN: ${{ secrets.OPENTELEMETRYBOT_GITHUB_TOKEN }}
       - uses: actions-ecosystem/action-remove-labels@v1
