--- a/connector/failoverconnector/metadata.yaml
+++ b/connector/failoverconnector/metadata.yaml
@@ -6,4 +6,4 @@ status:
     development: [metrics_to_metrics, traces_to_traces, logs_to_logs]
   distributions: []
   codeowners:
-    active: [djaglowski, fatsheep9146]
+    active: [akats7, djaglowski, fatsheep9146]
