OpenTelemetry Protocol with Apache Arrow Receiver initial skeleton (#30766)
First PR to introduce the OpenTelemetry Protocol with Apache Arrow
receiver. From the upstream repository:
https://github.com/open-telemetry/otel-arrow/blob/main/collector/receiver/otelarrowreceiver.

Similar to
https://github.com/open-telemetry/opentelemetry-collector-contrib/pull/30619
for the corresponding receiver.

**Link to tracking Issue:** #26491

**Testing:** 
This is a skeleton PR, therefore only the skeleton contains tests.
Compared with the upstream repository, the factory_test.go and
config_test.go files have been kept, the implementation tests in
otelarrow_test.go were excluded in this PR.

**Documentation:** New README, [copied from the upstream
repository](https://github.com/open-telemetry/otel-arrow/blob/main/collector/receiver/otelarrowreceiver/README.md).

---------

Signed-off-by: Joshua MacDonald <josh.macdonald@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -235,6 +235,7 @@ receiver/nsxtreceiver/                                   @open-telemetry/collect
 receiver/opencensusreceiver/                             @open-telemetry/collector-contrib-approvers @open-telemetry/collector-approvers
 receiver/oracledbreceiver/                               @open-telemetry/collector-contrib-approvers @dmitryax @crobert-1 @atoulme
 receiver/osqueryreceiver/                                @open-telemetry/collector-contrib-approvers @codeboten @nslaughter @smithclay
+receiver/otelarrowreceiver/                              @open-telemetry/collector-contrib-approvers @jmacd @moh-osman3
 receiver/otlpjsonfilereceiver/                           @open-telemetry/collector-contrib-approvers @djaglowski @atoulme
 receiver/podmanreceiver/                                 @open-telemetry/collector-contrib-approvers @rogercoll
 receiver/postgresqlreceiver/                             @open-telemetry/collector-contrib-approvers @djaglowski
