--- a/reports/distributions/contrib.yaml
+++ b/reports/distributions/contrib.yaml
@@ -148,6 +148,7 @@ components:
         - nsxt
         - opencensus
         - oracledb
+        - otelarrow
         - otlpjsonfile
         - podman_stats
         - postgresql
