--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -281,13 +281,13 @@ jobs:
           path: ~/.cache/go-build
           key: go-test-build-${{ runner.os }}-${{ matrix.go-version }}-${{ hashFiles('**/go.sum') }}
       - name: Run Unit Tests
-        if: startsWith( matrix.go-version, '~1.21' )
+        if: startsWith( matrix.go-version, '~1.20' ) != true # every other version
         run: make gotest GROUP=${{ matrix.group }}
       - name: Run Unit Tests With Coverage
         if: startsWith( matrix.go-version, '~1.20' ) # only run coverage on one version
         run: make gotest-with-cover GROUP=${{ matrix.group }}
       - uses: actions/upload-artifact@v3
-        if: startsWith( matrix.go-version, '~1.20' ) # only run coverage on one version
+        if: startsWith( matrix.go-version, '~1.20' ) # only upload one artifact
         with:
           name: coverage-artifacts
           path: ${{ matrix.group }}-coverage.txt
