[chore] Add build-and-test, build-and-test-windows, changelog and telemetrygen to merge group (#31162)
**Description:** 

Adds CI jobs that have required jobs to merge group. Needed for the
merge queue requested on open-telemetry/community/issues/1936

**Link to tracking Issue:** #30880

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,6 +6,7 @@
 name: changelog
 
 on:
+  merge_group:
   pull_request:
     types: [opened, synchronize, reopened, labeled, unlabeled]
     branches:
