[exporter/f5] deprecate exporter (#31186)
After discussion with @lquerel, he mentioned the component is no longer
maintained at F5. Marking it as deprecated.

---------

Signed-off-by: Alex Boten <aboten@lightstep.com>

--- a/exporter/f5cloudexporter/metadata.yaml
+++ b/exporter/f5cloudexporter/metadata.yaml
@@ -3,7 +3,8 @@ type: f5cloud
 status:
   class: exporter
   stability:
-    beta: [traces, metrics, logs]
+    deprecated: [traces, metrics, logs]
   distributions: [contrib, observiq]
   codeowners:
-    active: [gramidt]
+    active: []
+    emeritus: [gramidt]
