--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: ~1.21.5
+          go-version: "1.21.7"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: ~1.21.5
+          go-version: "1.21.7"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -81,7 +81,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: ~1.21.5
+          go-version: "1.21.7"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -128,7 +128,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: ~1.21.5
+          go-version: "1.21.7"
           cache: false
       - name: Cache Go
         id: go-cache
