[exporter/signalfx] Add option to send histograms in OTLP format (#31197)
**Description:**
This PR introduces a new config `send_otlp_histograms` to the `signalfx`
exporter. When the option is enabled. the exporter will send histograms
in OTLP format to the Splunk Observability backend.

**Link to tracking Issue:**
[26298](https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/26298)

--- a/.chloggen/signalfx-exp-otlp.yaml
+++ b/.chloggen/signalfx-exp-otlp.yaml
@@ -4,10 +4,10 @@
 change_type: enhancement
 
 # The name of the component, or a single word describing the area of concern, (e.g. filelogreceiver)
-component: receiver/signalfx
+component: exporter/signalfx
 
 # A brief description of the change.  Surround your text with quotes ("") if it needs to start with a backtick (`).
-note: Accept otlp protobuf requests when content-type is "application/x-protobuf;format=otlp"
+note: Send histograms in otlp format with new config `send_otlp_histograms` option
 
 # Mandatory: One or more tracking issues related to the change. You can use the PR number here if no issue exists.
 issues: [26298]
